# catopy

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build  pyproject.toml  pytest.ini  requirements.txt
docs/: VectorOperations.md
include/core/: InitializationFunctions.cuh  caTensor.cuh  caVector.cuh
include/device/: DataStructureInfo.cuh  GpuBuffer.cuh  KernelOptimizerConstants.cuh  LaunchConfig.cuh  caTensorInitValueWrapper.cuh  caTensorInitZeroWrapper.cuh  cuda_errors.cuh  devices.cuh
include/device/kernels/: vector_kernels.cuh
include/device/memory/: GpuBuffer.cuh  MemoryTransfer.cuh
include/device/optimizers/: BaseLaunchOptimizer.cuh  MatrixLaunchOptimizer.cuh  TensorLaunchOptimizer.cuh  VectorLaunchOptimizer.cuh
include/device/wrappers/: VectorOperationWrapper.cuh
include/host/: data_structures_bindings.hpp  devices_bindings.hpp
include/logger/: Logger.cuh  LoggingConfig.cuh
src/device/kernels/: vector_kernels.cu
src/device/memOps/wrappers/: caTensorInitValueWrapper.cu  caTensorInitZeroWrapper.cu
src/device/optimizers/: BaseLaunchOptimizer.cu  MatrixLaunchOptimizer.cu  TensorLaunchOptimizer.cu  VectorLaunchOptimizer.cu
src/device/utils/: devices.cu
src/device/wrappers/: VectorOperationWrapper.cu
src/host/bindings/: bindings.cpp  data_structures_bindings.cpp  devices_bindings.cpp
src/host/bindings/operations/: vector_operations.cpp  vector_operations.hpp
src/logger/: LoggingConfig.cpp
tests/: __init__.py
tests/backend/: test_host_palceholder.cpp  test_kernel_placeholder.cu
tests/devices/: __init__.py  test_device_detection.py
tests/frontend/: __init__.py  conftest.py  test_advanced_operations.py  test_basic_functionality.py  test_copy_method.py  test_error_handling.py  test_indexing_operators.py  test_initialization.py  test_logging.py  test_memory_transfer.py  test_slicing.py  test_vector_operations.py  test_visualization.py
tests/profiling/: __init__.py  conftest.py  test_basic_profiling.py  test_complete_profiling.py  test_memory_transfer_visualization.py
