[build-system]
requires = ["meson-python", "pybind11>=2.6"]
build-backend = "mesonpy"

[project]
name = "cato"
version = "0.1.0"
description = "Cuda Accelerated Tensor Operations"
authors = [
    {name = "Federico Vergelli", email = "federicocusot@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10.16"

[tool.meson-python]
# Configuración específica para meson-python

[project.optional-dependencies]
cuda = ["nvidia-cuda-runtime-cu12"]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "coverage>=7.0.0"
]
