[build-system]
requires = ["meson-python", "pybind11>=2.6"]
build-backend = "mesonpy"

[project]
name = "cato"
version = "0.1.0"
description = "Cuda Accelerated Tensor Operations"
authors = [
    {name = "Federico Vergelli", email = "federicocusot@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10.16"

[tool.meson-python]
# Configuración específica para meson-python

[project.optional-dependencies]
cuda = ["nvidia-cuda-runtime-cu12"]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "coverage>=7.0.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "psutil>=5.8.0"
]

#* Some tet deps are going to be removed from here since MAkefile handle them.

dev = [
    "setuptools>=68.0.0",
    "meson-python>=0.18.0",
    "ninja",
    "pybind11>=2.6"
]
